# data_visualisation

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Instructions.md  README.md  figures.ipynb  fort.6  init_results  run_script.sh
cmake/: CustomBuild.cmake
results/: high_dimension.f90
src/: CMakeLists.txt  constants.f90  data_io.f90  data_parsing.f90  initialisation.f90  input_output.f90  main.f90  main_hpc.f90  model.f90  parameters.f90  sheap_mpi.f90
src/constants/: CMakeLists.txt  constants.f90
src/data_io/: CMakeLists.txt  data_reader.f90  data_writer.f90
src/mpi_communication/: CMakeLists.txt  mpi_model 2.f90  mpi_model.f90
src/parameters/: CMakeLists.txt  parameters.f90  parameters.mod
src/solver/: CMakeLists.txt  high_dimension.f90  initialisation.f90  low_dimension_probability.f90  optimisation.f90
src/timing/: CMakeLists.txt  timing.f90
test/: CMakeLists.txt  test_data_reader.f90  test_loss_gradient.f90  test_optimisation.f90
